// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import squashed union with native protobuf generates nexus DSLs: edgecases/import_squashed_union/pkg1/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg1/types.proto

import * as _$testapis$edgecases$import_squashed_union$pkg1$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg1/types_pb\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg1$types_pb.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg1$types_pb.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg1.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1$types_pb.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    })
});
export const SquashedOneofInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1$types_pb.SquashedOneof, \\"$type\\">>(\\"SquashedOneofInput\\");
SquashedOneofInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"MessageInput\\",
            nullable: true
        })
    })
});
export const SquashedOneof = builder.unionType({
    name: \\"SquashedOneof\\",
    types: [
        \\"Message\\"
    ]
});
"
`;

exports[`import squashed union with native protobuf generates nexus DSLs: edgecases/import_squashed_union/pkg2/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg2/types.proto

import * as __$pkg1$types_pb_nexus from \\"../pkg1/types_pb_nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg1$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg1/types_pb\\";
import * as _$testapis$edgecases$import_squashed_union$pkg2$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg2/types_pb\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneof\\",
            nullable: true
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg2.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneofInput\\",
            nullable: true
        })
    })
});
"
`;

exports[`import squashed union with protobufjs generates nexus DSLs: edgecases/import_squashed_union/pkg1/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg1/types.proto

import * as _$testapis$edgecases$import_squashed_union$pkg1 from \\"./testapis/edgecases/import_squashed_union/pkg1\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg1.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    })
});
export const SquashedOneofInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.SquashedOneof, \\"$type\\">>(\\"SquashedOneofInput\\");
SquashedOneofInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"MessageInput\\",
            nullable: true
        })
    })
});
export const SquashedOneof = builder.unionType({
    name: \\"SquashedOneof\\",
    types: [
        \\"Message\\"
    ]
});
"
`;

exports[`import squashed union with protobufjs generates nexus DSLs: edgecases/import_squashed_union/pkg2/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg2/types.proto

import * as __$pkg1$types_pb_nexus from \\"../pkg1/types_pb_nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg2 from \\"./testapis/edgecases/import_squashed_union/pkg2\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneof\\",
            nullable: true
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg2.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneofInput\\",
            nullable: true
        })
    })
});
"
`;

exports[`import squashed union with ts-proto generates pothos DSLs: edgecases/import_squashed_union/pkg1/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg1/types.proto

import * as _$testapis$edgecases$import_squashed_union$pkg1 from \\"./testapis/edgecases/import_squashed_union/pkg1\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg1.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        body: t.expose(\\"body\\", {
            type: \\"String\\",
            nullable: false
        })
    })
});
export const SquashedOneofInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.SquashedOneof, \\"$type\\">>(\\"SquashedOneofInput\\");
SquashedOneofInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"MessageInput\\",
            nullable: true
        })
    })
});
export const SquashedOneof = builder.unionType({
    name: \\"SquashedOneof\\",
    types: [
        \\"Message\\"
    ]
});
"
`;

exports[`import squashed union with ts-proto generates pothos DSLs: edgecases/import_squashed_union/pkg2/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-pothos. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg2/types.proto

import * as __$pkg1$types_pb_nexus from \\"../pkg1/types_pb_nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg2 from \\"./testapis/edgecases/import_squashed_union/pkg2\\";
export const Message = builder.objectRef<_$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message>(\\"Message\\");
builder.objectType(Message, {
    name: \\"Message\\",
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneof\\",
            nullable: true
        })
    }),
    isTypeOf: source => {
        return (source as _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message | {
            $type: string & {};
        }).$type === \\"testapis.edgecases.import_squashed_union.pkg2.Message\\";
    }
});
export const MessageInput = builder.inputRef<Omit<_$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message, \\"$type\\">>(\\"MessageInput\\");
MessageInput.implement({
    fields: t => ({
        msg: t.expose(\\"msg\\", {
            type: \\"SquashedOneofInput\\",
            nullable: true
        })
    })
});
"
`;
